@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter v25.9.21-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-09-21 23:49:33, took 00:14:07, with 50 workers, on 4038 cases, 0 failed, 0 traces, 1 retries
+-;-;-;freeRouter v25.9.22-cur, done by sprscc13@mrn0b0dy.
+-;-;-;2025-09-22 00:25:43, took 00:14:15, with 50 workers, on 4038 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
