@@ -9,8 +9,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v25.9.21-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-09-21 23:49:33, took 00:14:07, with 50 workers, on 4038 cases, 0 failed, 0 traces, 1 retries<br/>
+release: freeRouter v25.9.22-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2025-09-22 00:25:43, took 00:14:15, with 50 workers, on 4038 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
