@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter v25.9.21-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-09-22 00:02:16, took 00:12:12, with 50 workers, on 844 cases, 0 failed, 0 traces, 3 retries
+-;-;-;freeRouter v25.9.22-cur, done by sprscc13@mrn0b0dy.
+-;-;-;2025-09-22 00:38:02, took 00:11:48, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
