@@ -9,8 +9,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v25.9.21-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-09-22 00:02:16, took 00:12:12, with 50 workers, on 844 cases, 0 failed, 0 traces, 3 retries<br/>
+release: freeRouter v25.9.22-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2025-09-22 00:38:02, took 00:11:48, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
