@@ -17528,3 +17528,5 @@ failed: wireguard over ipv4
 ---------------------------------- 2025-09-16 17:26:09 25.9.16
 no failed: wireguard over ipv4
 qc pass: wireguard over ipv4
+---------------------------------- 2025-09-22 00:11:28 25.9.22
+no todo: terminal clear same as game clear
